# projeto-lacrei

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
appointments/: admin.py  models.py  serializers.py  views.py
appointments/migrations/: 0001_initial.py
core/: settings.py  urls.py
professionals/: admin.py  models.py  serializers.py  views.py
professionals/migrations/: 0001_initial.py
